redirect + node_modules

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <input type="text" name="Standort">
                         <label>Auf welche Branche/Dienstleistung legt Ihre Firma einen Fokus?</label>
                         <input type="text" name="Fokus">
-                        <input type="hidden" name="_next" value="http://localhost:8080/danke.html">
+                        <input type="hidden" name="_next" value="https://b2bevent.herokuapp.com/danke.html">
                         <input class="button-red" type="submit" value="Abschicken">
                     </fieldset>
                 </form>
