--- a/danke.html
+++ b/danke.html
@@ -8,6 +8,7 @@
     <!-- Milligram CSS minified -->
     <link rel="stylesheet" href="bower_components/milligram/dist/milligram.min.css">
     <link rel="stylesheet" href="custom.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/ico" />
 </head>
 
 <body>
@@ -18,12 +19,14 @@
                 <p>Wir werden uns in Kürze bei Ihnen zurückmelden. Bei Rückfragen können Sie sich gerne direkt an uns wenden:</p>
                 <p>
                     <table>
-                    <tr>
-                        <td>E-Mail</td><td>b2b@icon-institute.de</td>
-                    </tr>
-                    <tr>
-                        <td>Telefon</td><td>+49 221 93743435</td>
-                    </tr>
+                        <tr>
+                            <td>E-Mail</td>
+                            <td>b2b@icon-institute.de</td>
+                        </tr>
+                        <tr>
+                            <td>Telefon</td>
+                            <td>+49 221 93743435</td>
+                        </tr>
                     </table>
                 </p>
                 <p><a href="./index.html">zurück</a></p>
