--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Milligram CSS minified -->
     <link rel="stylesheet" href="bower_components/milligram/dist/milligram.min.css">
     <link rel="stylesheet" href="custom.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/ico" />
 </head>
 
 <body>
