--- a/danke.html
+++ b/danke.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <title>Geschäftsanbahnung mit kompetenten IT-Firmen aus den palästinensischen Gebieten</title>
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <!-- CSS Reset -->
