--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="column column-33" style="text-align: left;"><img alt="" src="http://kjhnns.com/sendy/uploads/1456919802.png" style="width: 300px; height: 102px;" /></div>
-            <div class="column column-33" style="text-align: center;"><img alt="" src="http://kjhnns.com/sendy/uploads/1456919877.png" style="width: 200px; height: 113px;" /></div>
-            <div class="column column-33" style="text-align: right;"><img alt="" src="http://kjhnns.com/sendy/uploads/1456919955.png" style="width: 80px; height: 80px; margin-right: 20px" /></div>
+            <div class="column column-33" style="text-align: left;"><img alt="" src="assets/giz.png" style="width: 300px; height: 102px;" /></div>
+            <div class="column column-33" style="text-align: center;"><img alt="" src="assets/pita.png" style="width: 200px; height: 113px;" /></div>
+            <div class="column column-33" style="text-align: right;"><img alt="" src="assets/icon.png" style="width: 80px; height: 80px; margin-right: 20px" /></div>
         </div>
         <div class="row">
             <div class="column">
