--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row ">
             <div class="column column-80 column-offset-10">
-                <p>ICON INSTITUT Education and Training steht für über 40 Jahre Erfahrung in der Entwicklung, Planung und Realisierung internationaler Projekte, von Workshops, Events und B2B-Treffen sowie individueller Markteintrittsstrategien. Als eine der führenden Beratungsfirmen im Bereich der Entwicklungszusammenarbeit führen wir zur Zeit im Auftrag der Gesellschaft für Internationale Zusammenarbeit (GIZ) ein Projekt zur Stärkung der Wettbewerbsfähigkeit von Palästinensischen Unternehmen im IT-Sektor und zum Aufbau von deutsch-palästinensischen Partnerschaften im IT-Sektor durch. Finanziert wird das Vorhaben vom Bundesministeriums für wirtschaftliche Zusammenarbeit und Entwicklung (BMZ). Ziel des Projektes ist es, das Wachstum der palästinensischen IT-Branche durch Unterstützung der lokalen IT-Firmen zu fördern und durch eine Geschäftsanbahnung mit deutschen Firmen weiter voranzutreiben. Dies bietet gleichzeitig deutschen Firmen die Möglichkeit, sich auf dem arabischen Markt weiter auszudehnen, Outsourcing-Konzepte zu nutzen oder die eigene Produktpalette zu erweitern.</p>
+                <p><a href="https://www.icon-institute.de/">ICON INSTITUT Education and Training</a> steht für über 40 Jahre Erfahrung in der Entwicklung, Planung und Realisierung internationaler Projekte, von Workshops, Events und B2B-Treffen sowie individueller Markteintrittsstrategien. Als eine der führenden Beratungsfirmen im Bereich der Entwicklungszusammenarbeit führen wir zur Zeit im Auftrag der <a href="https://www.giz.de">Gesellschaft für Internationale Zusammenarbeit (GIZ)</a> ein Projekt zur Stärkung der Wettbewerbsfähigkeit von Palästinensischen Unternehmen im IT-Sektor und zum Aufbau von deutsch-palästinensischen Partnerschaften im IT-Sektor durch. Finanziert wird das Vorhaben vom <a href="http://www.bmz.de/">Bundesministeriums für wirtschaftliche Zusammenarbeit und Entwicklung (BMZ)</a>. Ziel des Projektes ist es, das Wachstum der palästinensischen IT-Branche durch Unterstützung der lokalen IT-Firmen zu fördern und durch eine Geschäftsanbahnung mit deutschen Firmen weiter voranzutreiben. Dies bietet gleichzeitig deutschen Firmen die Möglichkeit, sich auf dem arabischen Markt weiter auszudehnen, Outsourcing-Konzepte zu nutzen oder die eigene Produktpalette zu erweitern.</p>
                 <p>In diesem Zusammenhang laden wir Sie ein, palästinensische Unternehmen bei einem Geschäftstreffen in Deutschland kennenzulernen. Im Vorfeld haben wir kompetente palästinensische IT Unternehmen als Geschäftspartner identifiziert, die bereits auf dem internationalen Markt tätig sind und Potentiale zur Vermarktung und dem Support von deutschen Produkten in der MENA Region vorweisen.</p>
                 <p>Die Kosten für alle Leistungen im Rahmen der Geschäftserstanbahnung werden von der GIZ übernommen. Sie zahlen lediglich Ihre Reise und eventuelle Unterkunftskosten.</p>
                 <h3>Ihr Nutzen</h3>
@@ -47,9 +47,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="column column-33" style="text-align: left;"><img alt="" src="assets/giz.png" style="width: 300px; height: 102px;" /></div>
-            <div class="column column-33" style="text-align: center;"><img alt="" src="assets/pita.png" style="width: 200px; height: 113px;" /></div>
-            <div class="column column-33" style="text-align: right;"><img alt="" src="assets/icon.png" style="width: 80px; height: 80px; margin-right: 20px" /></div>
+            <div class="column column-33" style="text-align: left;"><a href="https://www.giz.de"><img alt="" src="assets/giz.png" style="width: 300px; height: 102px;" /></a></div>
+            <div class="column column-33" style="text-align: center;"><a href="https://www.icon-institute.de/"><img alt="" src="assets/pita.png" style="width: 200px; height: 113px;" /></a></div>
+            <div class="column column-33" style="text-align: right;"><a href="http://www.pita.ps/"><img alt="" src="assets/icon.png" style="width: 80px; height: 80px; margin-right: 20px" /></a></div>
         </div>
         <div class="row">
             <div class="column">
