--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="column column-33" style="text-align: left;"><a href="https://www.giz.de"><img alt="" src="assets/giz.png" style="width: 300px; height: 102px;" /></a></div>
-            <div class="column column-33" style="text-align: center;"><a href="https://www.icon-institute.de/"><img alt="" src="assets/pita.png" style="width: 200px; height: 113px;" /></a></div>
-            <div class="column column-33" style="text-align: right;"><a href="http://www.pita.ps/"><img alt="" src="assets/icon.png" style="width: 80px; height: 80px; margin-right: 20px" /></a></div>
+            <div class="column column-33 logoimg" style="text-align: left;"><a href="https://www.giz.de"><img alt="" src="assets/giz.png" style="width: 300px; height: 102px;" /></a></div>
+            <div class="column column-33 logoimg" style="text-align: center;"><a href="https://www.icon-institute.de/"><img alt="" src="assets/pita.png" style="width: 200px; height: 113px;" /></a></div>
+            <div class="column column-33 logoimg" style="text-align: right;"><a href="http://www.pita.ps/"><img alt="" src="assets/icon.png" style="width: 80px; height: 80px; margin-right: 20px" /></a></div>
         </div>
         <div class="row">
             <div class="column">
