--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row ">
             <div class="column column-80 column-offset-10">
 
-                <p><a href="https://www.icon-institute.de/">ICON-INSTITUT</a> und die <a href="https://www.giz.de">Gesellschaft für Internationale Zusammenarbeit (GIZ)</a> möchten Sie zur Teilnahme an unserer B2B-Mission in Deutschland die im Rahmen einer Entwicklungszusammenarbeit durchgeführt wird, einladen. Ziel der B2B-Mission ist es, palästinensischen und deutschen Firmen eine Plattform zu bieten, die es ermöglicht, Kooperationspotentiale zu identifizieren und Geschäftsbeziehungen zwischen IT Unternehmen aus Deutschland und der palästinensischen Region anzubahnen. </p>
+                <p><a href="https://www.icon-institute.de/">ICON-INSTITUT</a> und die <a href="https://www.giz.de">Gesellschaft für Internationale Zusammenarbeit (GIZ)</a> möchten Sie zur Teilnahme an unserer B2B-Mission in Deutschland, die im Rahmen einer Entwicklungszusammenarbeit durchgeführt wird, einladen. Ziel der B2B-Mission ist es, palästinensischen und deutschen Firmen eine Plattform zu bieten, die es ermöglicht, Kooperationspotentiale zu identifizieren und Geschäftsbeziehungen zwischen IT Unternehmen aus Deutschland und der palästinensischen Region anzubahnen. </p>
 <p>Im Vorfeld haben wir kompetente palästinensische IT Unternehmen als Geschäftspartner identifiziert, die bereits auf dem internationalen Markt tätig sind und Potentiale zur Vermarktung und dem Support von deutschen Produkten in der MENA-Region vorweisen.
 Im Rahmen dieser B2B-Mission möchte wir Sie gerne mit unseren palästinensischen Kandidaten an Ihrem Firmenstandort besuchen. </p>
 
@@ -39,7 +39,7 @@ Im Rahmen dieser B2B-Mission möchte wir Sie gerne mit unseren palästinensische
 <td><h4>Wo</h4></td><td><p class="lHAdj">Vertreter der ausgewählten palästinensischen Firmen werden nach Deutschland reisen, <a>um die teilnehmenden deutschen Firmen zu besuchen</a>. Die palästinensische Delegation wird von einem Mitarbeiter des ICON-INSTITUT begleitet.</p></td>
 </tr>
 <tr>
-<td style="border-bottom:0"><h4>Wann</h4></td><td style="border-bottom:0"><p class="lHAdj">Die B2B-Mission wird vom <a>11. bis zum 13. Mai</a> stattfinden. Sobald Sie Ihre Teilnahme bestätigt haben und Ihren präferierten Standort des Treffens angegeben haben, werden wir Sie in die logistische Planung mit einbeziehen und Ihnen einen Terminvorschlag zukommen lassen.</p></td>
+<td style="border-bottom:0"><h4>Wann</h4></td><td style="border-bottom:0"><p class="lHAdj">Die B2B-Mission wird vom <a>11. bis zum 13. Mai</a> stattfinden. Sobald Sie Ihre Teilnahme bestätigt haben und Ihren präferierten Standort des Treffens angegeben haben, werden wir Sie in die logistische Planung einbeziehen und Ihnen einen Terminvorschlag zukommen lassen.</p></td>
 </tr>
 </table>
 
