--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Geschäftsanbahnung mit kompetenten IT-Firmen aus den palästinensischen Gebieten</title>
+    <title>Geschäftsanbahnung mit kompetenten IT-Firmen aus Palästina</title>
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <!-- CSS Reset -->
@@ -12,17 +12,34 @@
     <link rel="icon" href="assets/favicon.ico" type="image/ico" />
     <script>
     window.onload = function() {
-        var elrr = document.getElementById("toggler");
-        var elr = document.getElementById("toggle");
-        elr.style.display = "none";
-        elrr.addEventListener('click', function() {
+
+        (function() {
+            var elrr = document.getElementById("toggler");
             var elr = document.getElementById("toggle");
-            if (elr.style.display != "none") {
-                elr.style.display = "none";
-            } else {
-                elr.style.display = "inline";
-            }
-        });
+            elr.style.display = "none";
+            elrr.addEventListener('click', function() {
+                var elr = document.getElementById("toggle");
+                if (elr.style.display != "none") {
+                    elr.style.display = "none";
+                } else {
+                    elr.style.display = "inline";
+                }
+            });
+        })();
+
+        (function() {
+            var elrr = document.getElementById("toggler2");
+            var elr = document.getElementById("toggle2");
+            elr.style.display = "none";
+            elrr.addEventListener('click', function() {
+                var elr = document.getElementById("toggle2");
+                if (elr.style.display != "none") {
+                    elr.style.display = "none";
+                } else {
+                    elr.style.display = "inline";
+                }
+            });
+        })();
 
     }
     </script>
@@ -119,10 +136,33 @@
                     <p class="smallfont centerfont">Von-Groote-Str. 28
                         <br/>50968 Köln
                         <br/>Germany</p>
+                    <div id="toggle2">
+                        <p>Diese Website benutzt Google Analytics, einen Webanalysedienst der Google Inc. („Google“). Google Analytics verwendet sog. „Cookies“, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch das Cookie erzeugten Informationen über Ihre Benutzung dieser Website werden in der Regel an einen Server von Google in den USA übertragen und dort gespeichert. Im Falle der Aktivierung der IP-Anonymisierung auf dieser Website, wird Ihre IP-Adresse von Google jedoch innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum zuvor gekürzt. Nur in Ausnahmefällen wird die volle IP-Adresse an einen Server von Google in den USA übertragen und dort gekürzt. Im Auftrag des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über die Websiteaktivitäten zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegenüber dem Websitebetreiber zu erbringen. Die im Rahmen von Google Analytics von Ihrem Browser übermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengeführt. Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem Sie das unter dem folgenden Link (http://tools.google.com/dlpage/gaoptout?hl=de) verfügbare Browser-Plugin herunterladen und installieren.</p>
+                        <p>Sie können die Erfassung durch Google Analytics verhindern, indem Sie auf folgenden Link klicken. Es wird ein Opt-Out-Cookie gesetzt, das die zukünftige Erfassung Ihrer Daten beim Besuch dieser Website verhindert:
+                            <a href=“javascript:gaOptout()“>Google Analytics deaktivieren</a></p>
+                        <p>Nähere Informationen zu Nutzungsbedingungen und Datenschutz finden Sie unter http://www.google.com/analytics/terms/de.html bzw. unter https://www.google.de/intl/de/policies/. Wir weisen Sie darauf hin, dass auf dieser Website Google Analytics um den Code „anonymizeIp“ erweitert wurde, um eine anonymisierte Erfassung von IP-Adressen (sog. IP-Masking) zu gewährleisten.</p>
+                    </div>
+                    <p id="toggler2" class="smallfont centerfont"><a class="button button-clear ">Datenschutzerklärung</a></p>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-76609323-1', 'auto');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
