--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Geschäftsanbahnung mit kompetenten IT-Firmen aus Palästina</title>
+    <title>IT-Outsourcing. Expansion. Arabische Region.</title>
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <!-- CSS Reset -->
