--- a/index.html
+++ b/index.html
@@ -116,14 +116,66 @@
                         <input type="text" name="Firma" required>
                         <label>* Wie lautet Ihre E-Mail-Adresse?</label>
                         <input type="email" name="E-Mail" required>
-                        <label>* Wo ist der Standort Ihrer Firma?</label>
+                        <label>* Wo ist der Standort Ihres Unternehmens?</label>
                         <input type="text" name="Standort" required>
-                        <label>Auf welche Branche/Dienstleistung legt Ihre Firma einen Fokus?</label>
+                        <label>Auf welche Branche/Dienstleistung legt Ihr Unternehmen einen Fokus?</label>
                         <input type="text" name="Fokus">
+                        <label>Möchten Sie ein bestimmtes Unternehmen kennenlernen?</label>
+                        <select name="PA Unternehmen 1">
+                            <option>Das ICON-INSTITUTE soll die Auswahl übernehmen</option>
+                            <option>ALTARIQ Systems & Projects</option>
+                            <option>ASAL Technologies</option>
+                            <option>Dimensions Information Technology</option>
+                            <option>EXALT Technologies</option>
+                            <option>iConnect Technologies</option>
+                            <option>ICT Warehouse Software and Communications</option>
+                            <option>Jaffa.Net</option>
+                            <option>Mozn</option>
+                            <option>Palestine Consulate Center PCC/MAF</option>
+                            <option>Professionals For IT Services (PITS)</option>
+                            <option>ProGineer Technologies</option>
+                            <option>UnitOne Software and Communications</option>
+                            <option>VISIONPLUS Software and Communications</option>
+                        </select>
+                        <select name="PA Unternehmen 2">
+                            <option>-</option>
+                            <option>ALTARIQ Systems & Projects</option>
+                            <option>ASAL Technologies</option>
+                            <option>Dimensions Information Technology</option>
+                            <option>EXALT Technologies</option>
+                            <option>iConnect Technologies</option>
+                            <option>ICT Warehouse Software and Communications</option>
+                            <option>Jaffa.Net</option>
+                            <option>Mozn</option>
+                            <option>Palestine Consulate Center PCC/MAF</option>
+                            <option>Professionals For IT Services (PITS)</option>
+                            <option>ProGineer Technologies</option>
+                            <option>UnitOne Software and Communications</option>
+                            <option>VISIONPLUS Software and Communications</option>
+                        </select>
+                        <select name="PA Unternehmen 3">
+                            <option>-</option>
+                            <option>ALTARIQ Systems & Projects</option>
+                            <option>ASAL Technologies</option>
+                            <option>Dimensions Information Technology</option>
+                            <option>EXALT Technologies</option>
+                            <option>iConnect Technologies</option>
+                            <option>ICT Warehouse Software and Communications</option>
+                            <option>Jaffa.Net</option>
+                            <option>Mozn</option>
+                            <option>Palestine Consulate Center PCC/MAF</option>
+                            <option>Professionals For IT Services (PITS)</option>
+                            <option>ProGineer Technologies</option>
+                            <option>UnitOne Software and Communications</option>
+                            <option>VISIONPLUS Software and Communications</option>
+                        </select>
                         <input type="hidden" name="_next" value="https://b2b.icon-institute.de/danke.html">
                         <p style="text-align: right;">
+                            <small style="float:left;margin-top:10px">Pflichtfelder sind mit einem * gekennzeichnet</small>
                             <input class="button-red" type="submit" value="Abschicken">
                         </p>
+
+
                     </fieldset>
                 </form>
             </div>
